[docs]作成者を変更

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
      <main>
      </main>
      <footer>
-        <h3>作成者:Arm203</h3>
-        <h4>連絡先:ochiohita@gmail.com</h4>
+        <h3>作成者:IkaTenDon</h3>
+        <h4>連絡先:<a src="https://github.com/IkaTenDon">https://github.com/IkaTenDon</a> </h4>
      </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="main.js"></script>
