[feat]入力フォームと登録フォームを追加

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       <h1>Todoアプリ</h1>
    </header>
    <main>
+      <form>
+         <!--入力フォーム-->
+         <input id="taskInput" type="text" value="" placeholder="タスクを入力">
+         <!--登録フォーム-->
+         <input id="regButton" type="button" value="register">
+      </form>
    </main>
    <footer>
       <h3>作成者:IkaTenDon</h3>
