[mock]タスクのリストを追加

--- a/index.html
+++ b/index.html
@@ -19,6 +19,38 @@
          <!--登録フォーム-->
          <input id="regButton" type="button" value="register">
       </form>
+      <div>
+         <!--DUMMY-->
+         <ul>
+            <span class="todoItem">
+               <li>
+                  Task1
+               </li>
+               <!--finish button-->
+               <input class="finButton" type="button" value="finish">
+               <!--delete button-->
+               <input class="delButton" type="button" value="delete">
+            </span>
+            <span class="todoItem">
+               <li>
+                  Task2
+               </li>
+               <!--finish button-->
+               <input class="finButton" type="button" value="finish">
+               <!--delete button-->
+               <input class="delButton" type="button" value="delete">
+            </span>
+            <span class="todoItem">
+               <li>
+                  Task3
+               </li>
+               <!--finish button-->
+               <input class="finButton" type="button" value="finish">
+               <!--delete button-->
+               <input class="delButton" type="button" value="delete">
+            </span>
+         </ul>
+      </div>
    </main>
    <footer>
       <h3>作成者:IkaTenDon</h3>
