[feat]registerボタンを押した時にtodoが追加される機能を追加

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </form>
       <div>
          <!--DUMMY-->
-         <ul>
+         <ul id="todoList">
             <span class="todoItem">
                <li>
                   Task1
