[refactor]リスト部にあったダミーを抹消

--- a/index.html
+++ b/index.html
@@ -22,33 +22,15 @@
       <div>
          <!--DUMMY-->
          <ul id="todoList">
-            <span class="todoItem">
-               <li>
-                  Task1
-               </li>
+            <!-- <span class="todoItem"> -->
+               <!-- <li> -->
+                  <!-- Task1 -->
+               <!-- </li> -->
                <!--finish button-->
-               <input class="finButton" type="button" value="finish">
+               <!-- <input class="finButton" type="button" value="finish"> -->
                <!--delete button-->
-               <input class="delButton" type="button" value="delete">
-            </span>
-            <span class="todoItem">
-               <li>
-                  Task2
-               </li>
-               <!--finish button-->
-               <input class="finButton" type="button" value="finish">
-               <!--delete button-->
-               <input class="delButton" type="button" value="delete">
-            </span>
-            <span class="todoItem">
-               <li>
-                  Task3
-               </li>
-               <!--finish button-->
-               <input class="finButton" type="button" value="finish">
-               <!--delete button-->
-               <input class="delButton" type="button" value="delete">
-            </span>
+               <!-- <input class="delButton" type="button" value="delete"> -->
+            <!-- </span> -->
          </ul>
       </div>
    </main>
